some random updates

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 market-making\maths\further_maths.ipynb
 market-making\code\more_on_FDM.ipynb
+general_knowledge\general-programming\python\random_numbers.ipynb
